Bug Fix
Fix profile card layout issue

--- a/style.css
+++ b/style.css
@@ -62,11 +62,8 @@ section {
 
 /* Profile - Card */
 .profile-card {
-    border-radius: 2rem;
-    padding: 4rem 2rem;
     text-align: center;
     color: black;
-    min-height: 100dvh;
 }
 
 .profile-picture {
